<resources>
    <string name="app_name">News Exposé</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_button_login">login</string>
    <string name="text_button_register">register</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_re_password">Re-Enter Password</string>
    <string name="text_sign_in">Sign In</string>
    <string name="hint_update_content">Add a caption…</string>
    <string name="def_user_name">Anonymous</string>
    <string name="text_comments">Comments</string>
    <string name="hint_comment_content">Add a comment…</string>
    <string name="text_checking_for_updates">checking for updates</string>
    <string name="digits_1">abcdefghijklmnopqrstuvwxyz1234567890@._</string>
    <string name="digits_2">0123456789</string>
    <string name="hint_contact">Phone Number</string>
    <string name="digits_3">abcdefghijklmnopqrstuvwxyz1234567890!@#$%^*-=_+:;,.?</string>
    <string name="text_signing_up">signing up</string>
    <string name="text_logging_in">logging in</string>
    <string name="text_verification">Verification</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="text_button_submit">submit</string>
    <string name="text_verifying">verifying</string>
    <string name="text_resend">Resend</string>
    <string name="text_button_next">next</string>
    <string name="text_checkbox_recaptcha">I\'m not a robot</string>
    <string name="text_uploading">uploading</string>
    <string name="text_loading">loading</string>
    <string name="text_status_disconnected">No Internet Connection</string>
    <string name="text_status_empty">No Updates</string>
    <string name="text_status_empty_1">Be The First To Comment</string>
</resources>
