<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_1"
    tools:context=".PhoneNumberActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/tahoma_regular"
                android:letterSpacing="0.6"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/colorWillpowerOrange"
                android:textSize="6pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.8"
                android:background="?attr/colorSecondary"
                app:layout_constraintBottom_toBottomOf="@id/constraint_verification"
                app:layout_constraintEnd_toEndOf="@id/constraint_verification"
                app:layout_constraintStart_toStartOf="@id/constraint_verification"
                app:layout_constraintTop_toTopOf="@id/constraint_verification" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_app_name">

                <TextView
                    android:id="@+id/tv_verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/calibri_regular"
                    android:text="@string/text_verification"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14pt"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linear_contact"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_verification">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp_country"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        app:ccpDialog_background="@drawable/img_background_2"
                        app:ccpDialog_textColor="?attr/colorOnPrimary"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_contentColor="?attr/colorPrimary"
                        app:ccp_showPhoneCode="false" />

                    <EditText
                        android:id="@+id/et_contact"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autofillHints="no"
                        android:background="@drawable/create_input_decoration"
                        android:digits="@string/digits_2"
                        android:hint="@string/hint_contact"
                        android:imeOptions="actionNext"
                        android:includeFontPadding="false"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="?attr/colorPrimary"
                        android:textColorHint="@color/colorChineseSilver1"
                        android:textSize="8pt" />

                </LinearLayout>

                <CheckBox
                    android:id="@+id/cb_recaptcha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:button="@drawable/create_check_circle"
                    android:padding="5dp"
                    android:text="@string/text_checkbox_recaptcha"
                    android:textColor="@color/colorChineseSilver1"
                    android:textSize="7pt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear_contact" />

                <TextView
                    android:id="@+id/tv_agreement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/tahoma_regular"
                    android:includeFontPadding="false"
                    android:letterSpacing="0.06"
                    android:text="By clicking Next, you agree to our Terms, Data Policy and Cookies Policy. You may receive SMS Notifications from us and can opt out any time."
                    android:textColor="@color/colorSpanishGray"
                    android:textSize="6pt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cb_recaptcha" />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/create_linear_button_round"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/text_button_next"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_agreement" />

                <TextView
                    android:id="@+id/btn_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/tahoma_regular"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:letterSpacing="0.06"
                    android:text="I don't have Phone number"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="6pt"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_next" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/is_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="?attr/colorSecondary"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.tuyenmonkey.mkloader.MKLoader
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:mk_color="?attr/colorPrimary"
            app:mk_type="TwinFishesSpinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:includeFontPadding="false"
            android:letterSpacing="0.06"
            android:text="@string/text_verifying"
            android:textAllCaps="true"
            android:textColor="@color/colorChineseSilver" />

    </LinearLayout>

</RelativeLayout>