<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_1"
    tools:context=".VerificationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/tahoma_regular"
                android:letterSpacing="0.6"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/color_willpower_orange"
                android:textSize="6pt"
                app:layout_constraintEnd_toEndOf="@id/iv_logo"
                app:layout_constraintStart_toStartOf="@id/iv_logo"
                app:layout_constraintTop_toBottomOf="@id/iv_logo" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.8"
                android:background="?attr/colorSecondary"
                app:layout_constraintBottom_toBottomOf="@id/constraint_verification"
                app:layout_constraintEnd_toEndOf="@id/constraint_verification"
                app:layout_constraintStart_toStartOf="@id/constraint_verification"
                app:layout_constraintTop_toTopOf="@id/constraint_verification" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_app_name">

                <TextView
                    android:id="@+id/tv_verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/calibri_regular"
                    android:text="@string/text_verification"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14pt"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_o_t_p"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints="no"
                    android:background="@drawable/create_input_decoration"
                    android:digits="@string/digits_contact"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/hint_otp"
                    android:imeOptions="actionDone"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:letterSpacing="0.3"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="?attr/colorPrimary"
                    android:textColorHint="@color/color_chinese_silver_1"
                    android:textSize="8pt"
                    app:layout_constraintTop_toBottomOf="@id/tv_verification" />

                <TextView
                    android:id="@+id/tv_agreement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/tahoma_regular"
                    android:letterSpacing="0.06"
                    android:text="We sent you an SMS code after verification on this number."
                    android:textColor="@color/color_spanish_gray"
                    android:textSize="6pt"
                    app:layout_constraintTop_toBottomOf="@id/et_o_t_p" />

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/create_linear_button_round"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/text_button_submit"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/tv_agreement" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_submit">

                    <TextView
                        android:id="@+id/tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/tahoma_regular"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:letterSpacing="0.06"
                        android:text="Don't receive OTP?"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="6pt"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_resend"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/tahoma_bold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:letterSpacing="0.06"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="6pt"
                        android:textStyle="italic"
                        app:layout_constraintStart_toEndOf="@id/tv" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/is_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.9"
            android:background="?attr/colorSecondary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.tuyenmonkey.mkloader.MKLoader
                android:id="@+id/mkloader"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:mk_color="?attr/colorPrimary"
                app:mk_type="TwinFishesSpinner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:includeFontPadding="false"
                android:letterSpacing="0.06"
                android:text="@string/text_verifying"
                android:textAllCaps="true"
                android:textColor="@color/color_chinese_silver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mkloader" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>